--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar And Navbar</title>    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="navbar">
-        <h1>PA<span>R</span>TH</h1>
+        <div id="side-toggle" class="side-toggle">
+            <div class="mobile" id="mobile">
+                <div class="sticks"></div>
+                <div class="sticks"></div>
+                <div class="sticks"></div>
+            </div>            
+            <div class="brand">
+                <h1>PA<span>R</span>TH</h1>
+            </div>
+        </div>
         <ul class="navigation">
             <li>Home</li>
             <li>About</li>
             <li>Contact Us</li>
             <li>Email</li>
-        </ul>
-        <div id="mobile" class="mobile">
-            <div class="sticks"></div>
-            <div class="sticks"></div>
-            <div class="sticks"></div>
-        </div>
+        </ul>      
     </div>
     <div class="container">
         <div class="sidebar">
@@ -40,17 +45,59 @@
         </div>
         <div class="main">
             <div class="card">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="view">
+                    <table class="table" id="myTable">
+                        <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Transporter</th>
+                                <th scope="col">GST Number</th> 
+                                <th scope="col">Controls</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            
+                        </tbody>
+                    </table>
+                </div>
+                <div class="control">
+                    <p class="error"></p>
+                        <div class="form">
+                            <form>
+                                <div>
+                                    <label for="trans" class="form-label">Transporter Name</label>
+                                    <input type="text" class="form-control" id="trans" autofocus autocomplete="off">                          
+                                </div>
+                                <div>
+                                    <label for="gst" class="form-label">GST Number</label>
+                                    <input type="text" class="form-control" id="gst" autocomplete="off">
+                                </div>
+                                <div class="buttons">
+                                    <button type="submit" class="save" id="save">Submit</button>
+                                    <button type="submit" class="cancel" id="cancel">Cancel</button>
+                                </div>                        
+                            </form>
+                        </div>                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">DELETE</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+            <div class="modal-body" id="modalbody">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" id="confirm">Delete</button>
+            </div>
             </div>
         </div>
     </div>
